Animate form-in-use warning header, small spacing fix

--- a/resources/less/editor.less
+++ b/resources/less/editor.less
@@ -172,13 +172,14 @@
 }
 
 .editor-form__used-in-haku-heading {
-  padding-left: 19px;
+  padding-left: 14px;
   font-weight: 600;
 }
 
 .editor-form__used-in-haku-list {
   list-style: none;
   margin-bottom: 0;
+  margin-left: -4px;
 }
 
 .editor-form__section_wrapper {
